创建操作符练习完成；

--- a/notes/01.基础概念.md
+++ b/notes/01.基础概念.md
@@ -43,3 +43,11 @@
 - catch -> catchError
 - switch -> switchAll
 - finally -> finalize
+
+## RxJS 6 结构
+
+- rxjs: 创建方法、类型、调度器和工具。
+- rxjs/ajax: RxJS HTTP请求实现。
+- rxjs/operators: 可链式调用（Pipeable）的RxJS操作符。
+- rxjs/testing: RxJS测试工具。
+- rxjs/webSocket: RxJS WebSocket实现。
