复习创建操作符，并补充创建操作符笔记；

--- a/notes/02.创建操作符.md
+++ b/notes/02.创建操作符.md
@@ -1,7 +1,291 @@
 ## create
 
-`Observable.create`'
+`create(onSubscription: function (observer: Observer): TeardownLogic): Observable`
+
+> 创建自定义的 Observable，它可以做任何你想做的事情。
 
 ```js
+create(obs => { obs.next(1) })
+  .subscribe(
+    next => console.log('next', next),
+    err => console.log('error', err),
+    () => console.log('the end')
+  )
 
+// result
+// 'next' 1
+```
+
+## of
+
+`of<T>(...args: Array<T | SchedulerLike>): Observable<T>`
+
+> 将传入的参数转换为可观察序列。
+
+```js
+of(10, 20, 30)
+  .subscribe(
+    next => console.log('next', next),
+    err => console.log('error', err),
+    () => console.log('the end')
+  )
+
+// result
+// 'next' 10
+// 'next' 20
+// 'next' 30
+// 'the end'
+```
+
+## range
+
+`range(start: number = 0, count: number = 0, scheduler: SchedulerLike): Observable<number>`
+
+> 发出区间范围内的数字序列。
+
+```js
+range(1, 3)
+  .subscribe(
+    next => console.log('next', next),
+    err => console.log('error', err),
+    () => console.log('the end')
+  )
+
+// result
+// 'next' 1
+// 'next' 2
+// 'next' 3
+// 'the end'
+```
+
+## generate
+
+`generate<T, S>(initialStateOrOptions: S | GenerateOptions<T, S>, condition?: ConditionFunc<S>, iterate?: IterateFunc<S>, resultSelectorOrObservable?: (ResultFUnc<S, T>) | SchedulerLike, scheduler?: SchedulerLike): Observable<T>`
+
+> 循环创建符合条件的 Obsrvable。
+
+```js
+generate(
+  0,
+  value => value < 10,
+  value => value + 2,
+  value => value * 2
+)
+  .subscribe(
+    next => console.log('next', next),
+    err => console.log('error', err),
+    () => console.log('the end')
+  )
+
+// result
+// 'next' 0
+// 'next' 4
+// 'next' 8
+// 'next' 12
+// 'next' 16
+// 'the end'
+```
+
+## repeat
+
+`repeat<T>(count: number = -1): MonoTypeOperatorFunction<T>`
+
+> 返回的 Observable 重复由源 Observable 所发出的项的流，最多可以重复 counot 次。
+
+```js
+of(1, 2, 3)
+  .pipe(
+    repeat(2)
+  )
+  .subscribe(
+    next => console.log('next', next),
+    err => console.log('error', err),
+    () => console.log('the end')
+  )
+
+// result
+// 'next' 1
+// 'next' 2
+// 'next' 3
+// 'next' 1
+// 'next' 2
+// 'next' 3
+// 'the end'
+```
+
+## empty
+
+`empty(scheduler?: SchedulerLike)`
+
+> 仅仅发出 complete 通知，其它什么也不做。
+
+```js
+empty()
+  .subscribe(
+    next => console.log('next', next),
+    err => console.log('error', err),
+    () => console.log('the end')
+  )
+
+// result
+// 'the end'
+```
+
+## never
+
+> 从不发出任何项的 Observable。
+
+```js
+never()
+  .subscribe(
+    next => console.log('next', next),
+    err => console.log('error', err),
+    () => console.log('the end')
+  )
+
+// result
+```
+
+## throwError
+
+`throwError(error: any, sheduler: SchedulerLike): Observer<never>`
+
+> 创建一个立即发出错误的 Observable。
+
+```js
+throwError('some error')
+  .subscribe(
+    next => console.log('next', next),
+    err => console.log('error', err),
+    () => console.log('the end')
+  )
+
+// result
+// 'error' 'some error'
+```
+
+## interval
+
+`interval(period: 0 = 0, scheduler: SchedulerLike = async): Observable<number>`
+
+> 创建一个 Observable，使用指定的 Scheduler，并以指定时间间隔发出连续的数字。
+
+```js
+interval(1000)
+  .subscribe(
+    next => console.log('next', next),
+    err => console.log('error', err),
+    () => console.log('the end')
+  )
+
+// result
+// ‘next' 1
+// ‘next' 2
+// ...
+```
+
+## timer
+
+`timer(dueTime: number | Date = 0, periodScheduler?: number | SchedulerLike, scheduler?:  SchedulerLike): Observable<number>`
+
+> 创建一个 observable，该 Observable 在初始延时之后开始并且在每个时间周期后发出自增的数字。
+
+```js
+timer(2000, 1000)
+  .subscribe(
+    next => console.log('next', next),
+    err => console.log('error', err),
+    () => console.log('the end')
+  )
+
+// result
+// ‘next' 1
+// ‘next' 2
+// ...
+```
+
+## form
+
+`from<T>(input: ObservableInput<T>, scheduler: SchedulerLike): Observable<T>`
+
+> 使用 Array，ArrayLikeObject, Promise, IterableObject, ObservableLikeObject 创建 Observable。
+
+```js
+from([1, 2, 3])
+  .subscribe(
+    next => console.log('next', next),
+    err => console.log('error', err),
+    () => console.log('the end')
+  )
+
+// result
+// ‘next' 1
+// ‘next' 2
+// ‘next' 3
+// ‘the end'
+```
+
+## fromPromise
+
+`fromPromise(promise: PromiseLike<T>, scheduler: Scheduler): Observable<T>`
+
+> 返回一个仅仅发出 Promise resolve 过的值然后完成的 Observable。
+
+```js
+from(new Promise(resolve => {
+  setTimeout(() => resolve('done'), 1000)
+}))
+  .subscribe(
+    next => console.log('next', next),
+    err => console.log('error', err),
+    () => console.log('the end')
+  )
+
+// result
+// ‘next' 'done'
+// ‘the end'
+```
+
+## fromEvent
+
+`fromEvent<T>(target: FromEventTarget<T>, eventName: string, options?: EventListenerOptions | ((...args: any[]) => T), resultSelector?: ((...args: any[]) => T)): Observable<T>`
+
+> 创建一个 Observable，该 Observable 发出来自给定事件对象的指定类型事件。
+
+```js
+fromEvent(element, 'click')
+```
+
+## fromEventPattern
+
+`fromEventPattern<T>(addHandler: (handler: Function) => any, removeHandler?: (handler: Function, signal?: any) => void, resultSelector?: (...args: any[]) => T): Observable<T | T[]>`
+
+> 从一个基于 addHandler/removeHandler 方法的API创建 Observable。
+
+## ajax
+
+```js
+ajax(url)
+```
+
+## repeatWhen
+
+`repeatWhen<T>(notifier: (notifications: Observable<any>) => Observable<any>): MonoTypeOperatorFunction<T>`
+
+> 通过一个 Observable 来控制数据源的重复吐出数据。
+
+```js
+source$.pipe(
+  repeatWhen(o$ => o$.pipe(delay(2000)))
+)
+```
+
+## defer
+
+`defer<T>(observableFactory: () => SubscribableOrPromise<T> | void): Observable<T>`
+
+> 惰性创建 Observable, 也就是说, 当且仅当它被订阅的时候才创建。
+
+```js
+defer(() => of(1, 2, 3))
 ```
