--- a/notes/02.创建操作符.md
+++ b/notes/02.创建操作符.md
@@ -204,7 +204,7 @@ timer(2000, 1000)
 // ...
 ```
 
-## form
+## from
 
 `from<T>(input: ObservableInput<T>, scheduler: SchedulerLike): Observable<T>`
 
