创建操作符笔记错误修正；

--- a/notes/02.创建操作符.md
+++ b/notes/02.创建操作符.md
@@ -179,8 +179,8 @@ interval(1000)
   )
 
 // result
-// ‘next' 1
-// ‘next' 2
+// 'next' 1
+// 'next' 2
 // ...
 ```
 
@@ -199,8 +199,8 @@ timer(2000, 1000)
   )
 
 // result
-// ‘next' 1
-// ‘next' 2
+// 'next' 1
+// 'next' 2
 // ...
 ```
 
@@ -219,10 +219,10 @@ from([1, 2, 3])
   )
 
 // result
-// ‘next' 1
-// ‘next' 2
-// ‘next' 3
-// ‘the end'
+// 'next' 1
+// 'next' 2
+// 'next' 3
+// 'the end'
 ```
 
 ## fromPromise
@@ -242,8 +242,8 @@ from(new Promise(resolve => {
   )
 
 // result
-// ‘next' 'done'
-// ‘the end'
+// 'next' 'done'
+// 'the end'
 ```
 
 ## fromEvent
@@ -263,6 +263,10 @@ fromEvent(element, 'click')
 > 从一个基于 addHandler/removeHandler 方法的API创建 Observable。
 
 ## ajax
+
+`ajax(url: string): Observable`
+
+> ajax 请求 Observable。
 
 ```js
 ajax(url)
