合并操作符笔记补充完整；

--- a/notes/03.合并操作符.md
+++ b/notes/03.合并操作符.md
@@ -1,35 +1,143 @@
 ## concat
 
-首尾相连
+`concat<T, R>(...observables: Array<ObservableInput<any> | SchedulerLike>): OperatorFunction<T, R>`
+
+> 创建一个输出 Observable，该 Observable 顺序的发出每个输入 Observable 的所有值。
+
+```js
+o1$.pipe(concat(o2$, o3$, ...))
+```
 
 ## merge
 
-先到先得，快速通过
+
+`merge<T, R>(...observables: Array<ObservableInput<any> | SchedulerLike | number>): OperatorFunction<T, R>`
+
+
+> 创建一个输出 Observable ，它可以同时发出每个给定的输入 Observable 中值。
+
+```js
+o1$.pipe(merge(o2$, o3$, ...))
+```
 
 ## zip
 
-拉链式组合，有一个数据源完结则完结
+`zip<T, R>(...observables: Array<ObservableInput<any> | ((...values: Array<any>) => R)>): OperatorFunction<T, R>`
 
-产生数据过快的数据源会导致**数据积压**问题
+> 将多个 Observable 组合以创建一个 Observable，该 Observable 的值是由所有输入 Observables 的值按顺序计算而来的。
+
+- 拉链式组合，有一个数据源完结则完结
+- 产生数据过快的数据源会导致**数据积压**问题
+
+```js
+o1$.pipe(zip(o2$, o3$, ...))
+```
 
 ## combineLatest
 
-合并最后一个数据
+`combineLatest<T, R>(...observables: Array<any | ObservableInput<any> | Array<ObservableInput<any>> | (((...values: Array<any>) => R)) | SchedulerLike>): Observable<R>`
 
-可能导致多重依赖问题
+> 组合多个 Observables 来创建一个 Observable ，该 Observable 的值根据每个输入 Observable 的最新值计算得出的。
+
+- 可能导致多重依赖问题
 
 ## withLatestFrom
 
-给下游推送数据只能由一个上游 Observable 对象驱动
+`withLatestFrom<T, R>(...args: Array<ObservableInput<any> | ((...values: Array<any>) => R)>): OperatorFunction<T, R>`
+
+> 结合源 Observable 和另外的 Observables 以创建新的 Observable， 该 Observable 的值由每个 Observable 最新的值计算得出，当且仅当源发出的时候。
+
+- 给下游推送数据只能由一个上游 Observable 对象驱动
+
+```js
+o1$.pipe(withLatestFrom(o2$, o3$, ...))
+```
 
 ## race
 
-胜者通吃
+`race<T>(...observables: Array<Observable<T> | Array<Observable<T>>>): MonoTypeOperatorFunction<T>`
+
+> 返回 Observable，该 Observable 是源 Observable 和提供的 Observables 的组合中 第一个发出项的 Observable 的镜像。
+
+
+```js
+o1$.pipe(race(o2$, o3$, ...))
+```
 
 ## startWith
 
-让一个 Observable 对象在订阅的时候，总是先吐出指定的若干数据
+`startWith<T, D>(...array: Array<T | SchedulerLike>): OperatorFunction<T, T | D>`
+
+> 返回的 Observable 会先发出作为参数指定的项，然后再发出由源 Observable 所发出的项。
+
+```js
+o1$.pipe(startWith(value1, value2, ...))
+```
 
 ## forkJoin
 
-只会产生一个数据，会等待所有参数 Observable 对象都完结，确定不会有新数据产生的时候，forkJoin 就会把所有输入的 Observable 对象产生的最后一个数据合并成下游唯一的数据
+`forkJoin<T>(...sources: Array<ObservableInput<T> | ObservableInput<T>[] | Function>): Observable<T[]>`
+
+> 只会产生一个数据，会等待所有参数 Observable 对象都完结，确定不会有新数据产生的时候，forkJoin 就会把所有输入的 Observable 对象产生的最后一个数据合并成下游唯一的数据。
+
+## concatAll
+
+`concatAll<T>(): OperatorFunction<ObservableInput<T>, T>`
+
+> 通过一个接一个的连接内部 Observable ，将高阶 Observable 打平。
+
+- 可能会导致**数据积压**问题。
+
+```js
+o1$.pipe(concatAll())
+```
+
+## mergeAll
+
+`mergeAll<T>(concurrent: number = Number.POSITIVE_INFINITY): MonoTypeOperatorFunction<T>`
+
+> 打平高阶 Observable 。
+
+```js
+o1$.pipe(mergeAll())
+```
+
+## zipAll
+
+`zipAll<T, R>(project?: (...values: Array<any>) => R): OperatorFunction<T, R>`
+
+> “拉链”式一对一配对。
+
+```js
+o1$.pipe(zipAll())
+```
+
+## combineAll
+
+`combineAll<T, R>(project?: (...values: Array<any>) => R): OperatorFunction<T, R>`
+
+> 当高阶 Observable 完成时，通过使用 combineLatest 将其打平。
+
+```js
+o1$.pipe(combineAll())
+```
+
+## switchAll
+
+`switchAll<T>(): OperatorFunction<ObservableInput<T>, T>`
+
+> 一旦有新的内部 Observable 出现，通过丢弃前一个，将高级 Observable 打平。
+
+```js
+o1$.pipe(switchAll())
+```
+
+## exhaust
+
+`exhaust<T>(): OperatorFunction<any, T>`
+
+> 当前一个内部 Observable 还未完成的情况下，通过丢弃内部 Observable 使得高阶 Observable 转换成一阶 Observable。
+
+```js
+o1$.pipe(exhaust())
+```
